# inkcollector

./: .gitignore  CHANGELOG.md  README.md  README.rst  pyproject.toml
.github/workflows/: codeql.yml  deploy-docs.yml  documentation-publish.yml  greetings.yml  python-package.yml
data/: cards.csv  cards.json  sets.csv  sets.json
docs/: inkcollector.rst  inkcollector.utils.rst  modules.rst
docs/source/: conf.py  index.rst
inkcollector/: __init__.py  cli.py  lorcast.py
inkcollector/utils/: log.py  output.py
tests/: test_cli.py
